--- a/Detectron2.ipynb
+++ b/Detectron2.ipynb
@@ -30,7 +30,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "original: https://colab.research.google.com/drive/116WVzYYTwXGWDBujiCnt2XVhUza7VPXd"
+        "original:\n",
+        "https://colab.research.google.com/drive/16jcaJoc6bCFAQ96jDe2HwtXj7BMD_-m5\n",
+        "https://github.com/facebookresearch/detectron2"
       ],
       "metadata": {
         "id": "w42NcD2F8_2v"
@@ -150,7 +152,7 @@
         "id": "dq9GY37ml1kr"
       },
       "source": [
-        "!wget https://cdn.pixabay.com/photo/2022/12/14/18/19/new-york-7655999_1280.jpg -q -O input.jpg\n",
+        "!wget https://cdn.pixabay.com/photo/2014/09/23/14/56/living-room-457793_1280.jpg -q -O input.jpg\n",
         "im = cv2.imread(\"./input.jpg\")\n",
         "cv2_imshow(im)"
       ],
