--- a/stable_diffusion.ipynb
+++ b/stable_diffusion.ipynb
@@ -12,13 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "47kV9o1Ni8GH"
-      },
       "source": [
-        "# **Colab Pro notebook from https://github.com/TheLastBen/fast-stable-diffusion** *Alternatives : [RunPod](https://www.runpod.io/console/gpu-browse?template=runpod-stable-unified)  | [Paperspace](https://console.paperspace.com/github/TheLastBen/PPS?machine=Free-GPU)*\n",
-        "##**[Support](https://ko-fi.com/thelastben)**"
-      ]
+        "original: https://github.com/TheLastBen/fast-stable-diffusion"
+      ],
+      "metadata": {
+        "id": "c-D3IcpPDGTA"
+      }
     },
     {
       "cell_type": "code",
@@ -128,7 +127,7 @@
         "\n",
         "with capture.capture_output() as cap:\n",
         "  %cd /content/ \n",
-        "  !wget -q -i https://raw.githubusercontent.com/TheLastBen/fast-stable-diffusion/main/Dependencies/A1111.txt\n",
+        "  !wget -q -i https://raw.githubusercontent.com/TotoB12/fast-stable-diffusion/main/Dependencies/A1111.txt\n",
         "  !dpkg -i *.deb\n",
         "  if not os.path.exists('/content/gdrive/'+mainpth+'/sd/stablediffusion'):\n",
         "    !tar -C /content/gdrive/$mainpth --zstd -xf sd_rep.tar.zst\n",
@@ -145,6 +144,17 @@
         "clear_output()\n",
         "inf('\\u2714 Done','success', '50px')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v2.safetensors\n",
+        "\n",
+        "https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate-inpainting.safetensors"
+      ],
+      "metadata": {
+        "id": "0iJEtm9XEtDb"
+      }
     },
     {
       "cell_type": "code",
